Se cargan archivos en vista

--- a/Vista/index.html
+++ b/Vista/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compresión de archivos</title>
+    <link href="bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container-md">
+        <div class="row m-5 text-center justify-content-center align-items-center">
+            <form method="post" action="GenerarZip.php" enctype="multipart/form-data" class="col-12 col-md-8 col-lg-6 col-xl-4">
+                    <input type="file" name="archivo" class="form-control" id="archivo">
+                    <button class="btn btn-outline-secondary my-3" type="submit">SUBIR Y COMPRIMIR</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
